<resources>
    <string name="app_name">Sekeni</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_store">Store</string>
    <string name="menu_order">Orders</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_wallet">Wallet</string>">
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="onboarding_screen_disc">Easily sell the clothes you no longer wear and make room for new favorites. Declutter your wardrobe and earn extra money effortlessly!</string>
    <string name="onboarding_screen_tittle1">Sell Clothes Online</string>
    <string name="onboarding_screen_disc2">Browse and place orders from the comfort of your home. Discover amazing deals and unique items with just a few clicks!</string>
    <string name="onboarding_screen_tittle2">Shop with Ease</string>
    <string name="onboarding_payment">Payment</string>
    <string name="onboarding_screen3">Receive payments instantly or choose a convenient cash option. Enjoy a seamless transaction experience every time!</string>
    <string name="facebook_app_id">501483522354716</string>
    <string name="fb_login_protocol_scheme">fb501483522354716D</string>
    <string name="facebook_client_token">45c4a3783bf9f61a5df8518673fb7fdb</string>
    <string name="sekeni">Sekeni</string>
    <string name="sign_in_with_google">Continue with Google</string>
    <string name="default_web_client_id">156426783612-citljsg4utkldqndcefe6biifei6hkg3.apps.googleusercontent.com
</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="todo">TODO</string>
    <string name="Login_heading_line">The On-line Mavumbulula.\nOwn your own On-line Store.\nStart selling all the clothes you don\'t want to give to your uncles and cousins</string>
    <string name="logout">logout</string>
    <string name="profileUsername">\@%1$s</string>
    <string name="sell_easily">Sell Easily</string>
    <string name="sell_easy_disc">Sell your school’s preloved items—from uniforms and accessories to sports gear—all through your phone.</string>
    <string name="trusted_community">Trusted Community</string>
    <string name="trust_desc">Buy and Sell with your school community, safely.</string>
    <string name="secure_payments">Secure Payments</string>
    <string name="secure_desc">Trade confidently with secure payments</string>
</resources>