<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_user"
            android:title="@string/menu_profile"
            android:fontFamily="@font/robotocondensed"
            android:actionLayout="@layout/nav_menu_item"

            />
        <item
            android:id="@+id/nav_store"
            android:width="50dp"
            android:icon="@drawable/ic_store"
            android:title="@string/menu_store"
            app:showAsAction="always"
            android:actionLayout="@layout/nav_menu_item" />
        <item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/ic_wallet"
            android:title="@string/menu_wallet"
            app:showAsAction="always"
            android:actionLayout="@layout/nav_menu_item" />
        <item
            android:id="@+id/nav_purchases"
            android:icon="@drawable/ic_checkout"
            android:title="Purchases"
            app:showAsAction="ifRoom"
            android:actionLayout="@layout/nav_menu_item" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_setting"
            android:actionLayout="@layout/nav_menu_item"
            app:showAsAction="always" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"
            app:showAsAction="always"
            android:actionLayout="@layout/nav_menu_item" />
    </group>
</menu>
